- testing app mode

--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,10 @@
 name: jupyter-flipside-poc
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - python=3.8
+  - appmode
   - pandas
   - plotly
   - jupyter_contrib_nbextensions
